---------------------------------------------------------------------------------------------------
Version: 2.1.7
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.1.6
Date: 2023-01-01
  Changes:
    - Added support for adjusted tiers of Ore Processing techs
    - Added support for new tiers of Crystallizer and Filtration Unit
    - Added support for adjusted tiers for Sintering Ovens and Chemical Furnaces
---------------------------------------------------------------------------------------------------
Version: 2.1.5
Date: 2022-10-06
  Locale:
    - Updated Traditional Chinese localization.
---------------------------------------------------------------------------------------------------
Version: 2.1.4
Date: 2022-08-15
  Changes:
    - Removed internal building sprites native to Angel's Refining, minimum version is now 0.12.1
    - Removed internal building sprites native to Angel's Petrochemical Processing, minimum version is now 0.9.21
    - Removed internal item and recipe icons native to Angel's Smelting, minimum version is now 0.6.15
    - Added support for adjusted progression tiers for ore processing machines, pellet presses, and powder mixers to reflect changes to ingredients in Angel's Smelting version 0.6.20
    - Added support for adjusted progression tiers for chemical plants to reflect changes to ingredients in Angel's Petrochemical Processing version 0.9.23
    - Added support for adjusted progression tiers for algae farms to reflect changes to ingredients in Angel's Bioprocessing version 0.7.23
    - Changed tech icon for Mechanical Refining to Ore Sorting Facility 1 when playing with Sea Block
---------------------------------------------------------------------------------------------------
Version: 2.1.3
Date: 2022-04-03
  Bugfixes:
    - "My name is... Tim." Fixed that the recipe for tin plate from crushed bobmonium was broken when using Angel's tin plate